# wch

./: .gitignore  .gitmodules  Dockerfile  README.md  README_CN.md  acn-pk.pem  acn-sk.pem  build.ps1  build.sh  hi.sh  process-log.py  s-clean.sh  s-options.sh  s.sh  source.list.tuna  tx-post.json  tx-pre.json  watch-log.sh
weak/: .#run_scratch_ssl.zsh  CMakeLists.txt  helpers.py  main.cpp  notes.org  run_psstn_one.sh  run_psstn_two.sh  run_scrach_py.zsh  run_scratch.sh  run_scratch.zsh  run_scratch2.zsh  run_scratch_bft.sh  run_scratch_bft.zsh  run_scratch_raft.zsh  run_scratch_ssl.zsh  run_scratch_txck.zsh  run_scratch_unix.zsh  run_show.zsh  send_a_tx_pb.py  test_psstn.py  test_pyvm.py  test_tx_mode.py  test_with_light_exe.py  test_with_light_exe_bft.py  test_with_mocked_exe.py  test_with_mocked_exe_bft.py  test_with_normal_exe.py  test_with_unix_and_pb.py  weak_txs_tool.py  weak_txs_tool2.py
weak/cmake/: deps.cmake
weak/doc/: 2024-01-23.tex  2024-01-30.tex  2024-02-11.tex  2024-03-05.tex  Makefile  d.tex  doc-concepts.tex  doc-tutorials.tex  doc.sh  doc.tex  example-contract.py  h-common.tex  h-lua.tex  h-xe.tex  h.tex  m.tex  m1.tex  m2.tex  main.tex  memo.tex  s-R.sh  scratch.cpp  scratch.py  storage-exec.tex  t.R  t.md  t2.R  test.ipynb  tmp.tex
weak/doc/data/: tps.csv
weak/doc/tex/: m-tps.tex  p1.tex  result-table.tex
weak/include/: config.hpp.in  core.hpp  core0.cpp  core0.hpp  div2Executor.hpp  div2ExecutorSr.hpp  evmExecutor.hpp  execManager.hpp  forPostExec.hpp  hi.proto  naiveConsensus.hpp  pure-common.hpp  rpc.hpp  storageManager.hpp  t.json  toolbox.hpp  txVerifier.hpp
weak/include/cnsss/: cnsssBlkChainAsstn.hpp  exeForCnsss.hpp  forCnsss.hpp  mempool.hpp  pure-0bft.hpp  pure-forCnsss.hpp  pure-listenToOne.hpp  pure-listenToOne.proto  pure-raft.hpp  pure-rbft.hpp  pure-rbft.proto  sealer.hpp
weak/include/cnsss/test-listenToOne/: CMakeLists.txt  pure-testListenToOne.cpp
weak/include/cnsss/test-raft/: CMakeLists.txt  pure-testRaft.cpp
weak/include/cnsss/test-rbft/: CMakeLists.txt  pure-testRbft.cpp
weak/include/init/: CMakeLists.txt  hold_on.hpp  init-notes.md  init.hpp  options.hpp  testOptions.cpp  test_1.py
weak/include/init/testOptions/: CMakeLists.txt  testOptions.cpp  test_1.py
weak/include/net/: pure-greenHttpClient.hpp  pure-httpCommon.hpp  pure-httpNetAsstn.hpp  pure-netAsstn.hpp  pure-udpNetAsstn.hpp  pure-weakAsyncHttpServer.hpp  pure-weakHttpClient.hpp  pure-weakHttpServer.hpp  pure-weakUdpClient.hpp  pure-weakUdpServer.hpp
weak/include/net/test-asstn-client/: CMakeLists.txt  m.cpp  m.py  test_one.py
weak/include/net/test-client/: CMakeLists.txt  m.cpp  m.py  test_one.py  test_weakHttpClient.cpp
weak/include/net/test-server/: CMakeLists.txt  test.cpp  test_one.py
weak/other/: invoke-template.py  invoke.py  test_verifier.py  use-verifier.py  verifier.py
weak/other/example/: ok-basic.py
weak/pkgs/evmweak/: CMakeLists.txt  advanced_analysis.cpp  advanced_analysis.hpp  advanced_execution.cpp  advanced_execution.hpp  advanced_instructions.cpp  baseline.cpp  baseline.hpp  baseline_instruction_table.cpp  baseline_instruction_table.hpp  config.cmake  cpu_check.cpp  eof.cpp  eof.hpp  execution_state.hpp  instructions.hpp  instructions_calls.cpp  instructions_opcodes.hpp  instructions_storage.cpp  instructions_traits.hpp  instructions_xmacro.hpp  opcodes_helpers.h  tracing.cpp  tracing.hpp  vm.cpp  vm.hpp
weak/pkgs/evmweak/evmc-10.1.0/include/evmc/: evmc.h
weak/pkgs/evmweak/include/evmweak/: evmweak.h
weak/test/: CMakeLists.txt  h.hpp  hi.sol  mock.hpp  pure-mock.hpp  test-cnsssBlkChainAsstn.cpp  test-core-20240130.cpp  test-core.cpp  test-core2.cpp  test-exeForCnsss.cpp  test-exeForCnsss2.cpp  test-execManager.cpp  test-executeDiv2Tx.cpp  test-executeEvmTx.cpp  test-executeSr.cpp  test-forCnsss.cpp  test-forPostExec-20240201.cpp  test-forPostExec.cpp  test-hi.cpp  test-httpNetAsstn.cpp  test-httpNetAsstn2.cpp  test-inRamWrld.cpp  test-init.cpp  test-mempool.cpp  test-pure-anet.cpp  test-pure-forCnsss.cpp  test-pure-greenClient.cpp  test-pure-rbft.cpp  test-pure-thrd-party.cpp  test-pure-udp.cpp  test-rpc-20240205.cpp  test-rpc-pb.cpp  test-rpc.cpp  test-sealer.cpp  test-storageManager.cpp  test-storageManager2.cpp  test-toolbox.cpp  test-udpNetAssnt.cpp  test_tps.cpp  tests-helped-by-pytest.sh
weak/test/example-jsons/: client-txs-bad.json  client-txs-ok.json  rbft-LaidDownMsg-bad.json  rbft-LaidDownMsg-ok.json  rbft-new-view-cert-bad.json  rbft-new-view-cert-ok.json
weak/test/utils/: bytescode.hpp  utils.hpp
